--- a/dice.html
+++ b/dice.html
@@ -35,7 +35,7 @@
               <h2>Player 1</h2>
             </div>  <!--  P1 CARD HEADER  -->
             <div class="card-body">
-              <img id="player1" src="images/dice1.png" alt="Dice number 1">
+              <img id="player1" src="images/dice1.PNG" alt="Dice number 1">
             </div>  <!--  P1 CARD BODY  -->
           </div>  <!--  P1 CARD  -->
         </div>  <!--  P1 COL  -->
@@ -50,7 +50,7 @@
               <h2>Player 2</h2>
             </div>  <!--  P2 CARD HEADER  -->
             <div class="card-body">
-              <img id="player2" src="images/dice1.png" alt="Dice number 2">
+              <img id="player2" src="images/dice1.PNG" alt="Dice number 2">
             </div>  <!--  P2 CARD BODY  -->
           </div>  <!--  P2 CARD  -->
         </div>  <!--  P2 COL  -->
